Full width on mobile, fixes #1

--- a/dps-columns.css
+++ b/dps-columns.css
@@ -77,3 +77,25 @@
 	clear: both;
 	margin-left: 0;
 }
+
+@media only screen and (max-width: 767px) {
+
+	.five-sixths,
+	.four-sixths,
+	.four-fifths,
+	.one-fifth,
+	.one-fourth,
+	.one-half,
+	.one-sixth,
+	.one-third,
+	.three-fourths,
+	.three-fifths,
+	.three-sixths,
+	.two-fourths,
+	.two-fifths,
+	.two-sixths,
+	.two-thirds {
+		margin-left: 0;
+		width: 100%;
+	}
+}
